<resources>
    <string name="app_name">GPS Topography </string>

    <string name="titulo_app">GPS Topography</string>
    <string name="menu_principal">Calculate the area of any ​​polygon, measured with the azimuth conservation method.</string>
    <string name="ingresar_poligono">Recalculate</string>
    <string name="salir">Exit</string>
    <string name="ingreso_datos_proyecto">Project Data Input</string>
    <string name="ingreso_datos_terreno">Terrain Data Input</string>
    <string name="fecha">Date:</string>
    <string name="proyecto">Project: </string>
    <string name="proyecto_hint">Name of the project. </string>
    <string name="cliente">Client: </string>
    <string name="cliente_hint">Name of client.</string>
    <string name="ubicacion">Location: </string>
    <string name="ubicacion_hint">Location of project. </string>
    <string name="responsable">Responsible: </string>
    <string name="responsable_hint">Who did the measurement.</string>
    <string name="cancelar1">Cancel</string>
    <string name="guardar">Save</string>
    <string name="ir">¡Go!</string>
    <string name="facil_medicion">Easy</string>
    <string name="dificil_medicion">Hard</string>
    <string name="dificultad">Difficulty of Measurement</string>
    <string name="coor_punto_inicial">Starting Point Coordinate (m)</string>
    <string name="a_trabajar">Work!</string>
    <string name="y">Yo:</string>
    <string name="x">Xo:</string>
    <string name="ingreso_distaz_est">Distance and Azimuth entry of each station.</string>
    <string name="ultimo_punto">¿Last point? (Required)</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="est_aparato">Station</string>
    <string name="punto_ob">Observed Point: </string>
    <string name="distancia">Distance (m): </string>
    <string name="azimut">Azimuth (° \' \"): </string>
    <string name="boton_siguiente">Save and Continue</string>
    <string name="dat_inco_distaz">Values must be: Distance &gt; 0 , 0 &lt;= degrees &lt;= 360 , 0 &lt;= minutes &lt; 60 , 0 &lt;= seconds &lt; 60</string>
    <string name="resultados">Results</string>
    <string name="error_permisible">¿Allowable unit closing error?</string>
    <string name="error_si_cumple">Yes! Proceed</string>
    <string name="error_no_cumple">Fails</string>
    <string name="proceder">¿Proceed?</string>
    <string name="area">Polygon Area (m2):</string>
    <string name="calcular">¡Calculate!</string>
    <string name="finalizar">Finish</string>

    <string name="imprimir">Generate pdf</string>
    <string name="sin_app_para_pdf">You do not have an app to open pdf files.</string>
    <string name="sin_app_para_csv">You do not have an app to open csv files.</string>

    <string name="reporte">reports</string>
    <string name="reporte2">report</string>

    <string name="encabezado">CALCULATION MEMORY</string>
    <string name="resto_autor">.  Powered by iTextG.</string>
    <string name="firma_sello">Sign and Stamp:</string>
    <string name="est">STA.</string>
    <string name="PO">Obs. P.</string>
    <string name="dist">Dist.(m)</string>
    <string name="gra">Az. (°)</string>
    <string name="min">Az. (\')</string>
    <string name="seg">Az. (\")</string>
    <string name="firma_y_sello">Signature and stamp of responsible:</string>
    <string name="pagina">Pg.  </string>
    <string name="de">  of </string>
    <string name="n">N</string>
    <string name="s">S</string>
    <string name="e">E</string>
    <string name="o">W</string>
    <string name="error_p">Permissible closing unit error</string>
    <string name="suma_n">Sum of north</string>
    <string name="suma_s">Sum of south</string>
    <string name="suma_e">Sum of east</string>
    <string name="suma_o">Sum of west</string>
    <string name="resta_y">Difference in Y axis</string>
    <string name="resta_x">Difference in X axis</string>
    <string name="perimetro">Perimeter</string>
    <string name="error">Closing error</string>
    <string name="error_un">Closing unit error</string>
    <string name="cy">Correction on Y axis</string>
    <string name="cx">Correction on X axis</string>
    <string name="cn">N Correction</string>
    <string name="cs">S Correction</string>
    <string name="ce">E Correction</string>
    <string name="co">W Correction</string>
    <string name="nc">Corrected N</string>
    <string name="sc">Corrected S</string>
    <string name="ec">Corrected E</string>
    <string name="oc">Corrected W</string>
    <string name="ypc">Ypc</string>
    <string name="xpc">Xpc</string>
    <string name="yt">Yt</string>
    <string name="xt">Xt</string>
    <string name="yx">Y*X</string>
    <string name="xy">X*Y</string>
    <string name="totales">Total </string>
    <string name="ultima_linea">-----------------------------------------------------------Last Line-----------------------------------------------------------</string>
    <string name="valorar">Please rate the app on Google Play.</string>
    <string name="valorar1">Rate the app on Google Play to generate PDF.</string>
    <string name="valorar_ok">Ok </string>
    <string name="valorar_no">Not now. </string>
    <string name="cerro_video">You closed the video, sorry but no report.</string>
    <string name="no_cargo_banner">Failed on load banner, only area will be calculated.</string>
    <string name="clik_banner">Click on the banner below to calculate the area of ​​the polygon and generate pdf report. If the banner is not displayed please wait a moment to upload. </string>
    <string name="espere">Procesing...</string>
    <string name="espere_pdf">Generating PDF...</string>
    <string name="espere_txt">Generating TXT...</string>
    <string name="espere_dxf">Generating DXF...</string>

    <string name="reporte_en">File generate at </string>
    <string name="csv_en">TXT generated at </string>
    <string name="dxf_en">DXF generated at </string>
    <string name="generar">Show file: </string>
    <string name="cargando">Loading...</string>
    <string name="instrucciones">USER MANUAL AND MORE</string>
    <string name="tabla_pro">TABLE 1: RESPONSIBLE PROFESSIONAL DATA</string>
    <string name="tabla_datos">TABLE 2: PROYECT DATA</string>
    <string name="tabla_terreno">TABLE 3: TERRAIN DATA</string>
    <string name="tabla1">TABLE 4: ENTERED DATA AND PARTIAL COORDINATES</string>
    <string name="tabla2">TABLE 5: NORTH, SOUTH, EAST AND WEST OF EACH POINT</string>
    <string name="tabla_error">TABLE 6: CLOSING ERROR CALCULATION</string>
    <string name="tabla3">TABLE 7: CORRECTION CALCULATION</string>
    <string name="tabla4">TABLE 8: CORRECTED NORTH, SOUTH, EAST AND WESTOF EACH POINT</string>
    <string name="tabla5">TABLE 9: COMPENSATED PARTIAL COORDINATES, TOTAL COORDINATES AND AREA CALCULATION</string>
    <string name="tabla6">TABLE 3: GPS DATA</string>

    <string name="ingreso_gps">Measure (GMaps)</string>
    <string name="ingreso_gps2">Measure (GPS points)</string>

    <string name="latitud">Latitude</string>
    <string name="longitud">Longitude </string>
    <string name="punto_actual">Actual Point</string>
    <string name="proximo_punto">Next Point</string>
    <string name="elevacion">Elevation(m)</string>
    <string name="estabilizando">Getting coordinates, please wait a moment...</string>
    <string name="bloquear_guardar">Lock position to save point</string>
    <string name="boton_bloquear">Lock</string>
    <string name="boton_desbloquear">Unlock</string>
    <string name="utm">UTM</string>
    <string name="hecho_en">¡Proudly made in XELA, come!</string>
    <string name="link_youtube">https://www.d3sarrollo.com/gps-topography/</string>
    <string name="link_face">https://www.youtube.com/channel/UCPNO0-9WV1exwHmm8Sqx-5Q</string>

    <string name="archivos_en">Files generated in the following folder of the internal storage of this device: </string>
    <string name="archivos">¡Files generated correctly!</string>
    <string name="explicar_wes">"Please allow writing to external storage to generate files."</string>
    <string name="explicar_afl">"Please allow access to GPS to be able to use points with GPS."</string>
    <string name="reiniciar">"Please reinstall the app."</string>
    <string name="posicion_actual">"You are here!"</string>
    <string name="politica_privacidad">"Privacy Policy"</string>


    <string name="id_banner">"ca-app-pub-3940256099942544/6300978111"</string>
    <string name="id_inter">"ca-app-pub-3940256099942544/1033173712"</string>

    <!--
    De prueba
    <string name="id_banner">"ca-app-pub-3940256099942544/6300978111"</string>
    <string name="id_inter">"ca-app-pub-3940256099942544/1033173712"</string>

    Reales
    <string name="id_banner">"ca-app-pub-7114592307899156/8647133400"</string>
    <string name="id_inter">"ca-app-pub-7114592307899156/4452559916"</string>
    -->

</resources>
